[package]
name = "cache-rpc"
version = "0.1.28"
authors = ["Alexander Polakov <a.polakov@iconic.vc>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
actix = "0.10"
actix-codec = "0.3"
actix-cors = "0.5"
actix-http = "2.2"
tokio = { version = "0.2", features = ["sync", "time", "macros"] }
bytes = "0.5"
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
awc = { version = "2", features = ["openssl"] }
bs58 = "0.4"
dashmap = "4"
futures-util = "0.3"
stream_generator = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["json", "chrono"] }
tracing-appender = { version = "0.1" }
tracing-futures = "0.2"
structopt = "0.3"
base64 = "0.13"
zstd = "0.9"
smallvec = { version = "1.6", features = ["serde", "union"] }
thiserror = "1.0"
anyhow = "1.0"
prometheus = { version = "0.12", default-features = false, features = ["process"] }
once_cell = "1.7"
lru = "0.6"
backoff = "0.2"
signal-hook = "0.1.11"
file-reopen = { git = "https://github.com/polachok/file-reopen.git", rev = "da89261" }
either = "1.6"
humantime = "2.1"
toml = "0.5"

[dev-dependencies]
proptest = "1"
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "filters_bench"
harness = false

[patch.crates-io]
actix-http = { git = "https://github.com/polachok/actix-web", rev = "19cd7fdbd5b79e9d78c8cb562741d7513d980b18" }
