[package]
name = "cache-rpc"
version = "0.1.36"
authors = ["Alexander Polakov <a.polakov@iconic.vc>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.10"
actix = "0.12"
actix-codec = "0.4"
actix-cors = "0.6.0-beta.3"
actix-http = "3.0.0-beta.11"
tokio = { version = "1.0", features = ["sync", "time", "macros"] }
tokio-util = { version = "0.6", features = ["time"] }
bytes = "1.0"
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
awc = { version = "3.0.0-beta.9", features = ["openssl"] }
bs58 = "0.4"
dashmap = "4"
futures-util = "0.3"
stream_generator = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["json", "chrono"] }
tracing-appender = { version = "0.1" }
tracing-futures = "0.2"
structopt = "0.3"
base64 = "0.13"
zstd = "0.7"
smallvec = { version = "1.6", features = ["serde", "union"] }
thiserror = "1.0"
anyhow = "1.0"
prometheus = { version = "0.12", default-features = false, features = ["process"] }
once_cell = "1.7"
lru = "0.6"
backoff = "0.2"
signal-hook = "0.1.11"
file-reopen = { git = "https://github.com/polachok/file-reopen.git", rev = "da89261" }
either = "1.6"
humantime = "2.1"
toml = "0.5"
arc-swap = "1.4"
mlua = { version = "0.6", features = ["luajit", "vendored"] }
pin-project = "1.0"

solana-account-decoder = { version = "=1.8.2", optional = true }
solana-sdk = { version =  "=1.8.2", optional = true }
solana-program = { version = "=1.8.2", optional = true }
spl-token-v2-0 = { package = "spl-token", version = "=3.2.0", features = ["no-entrypoint"], optional = true}

[dev-dependencies]
proptest = "1"
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "filters_bench"
harness = false

[patch.crates-io]
solana-account-decoder = { git = "https://github.com/polachok/solana", rev = "ec4e167b00b2fd3799b935bb7ca49775f6a4b63e" }
solana-sdk = { git = "https://github.com/polachok/solana", rev = "ec4e167b00b2fd3799b935bb7ca49775f6a4b63e" }
solana-program = { git = "https://github.com/polachok/solana", rev = "ec4e167b00b2fd3799b935bb7ca49775f6a4b63e" }

#[patch.crates-io]
#actix-http = { git = "https://github.com/polachok/actix-web", rev = "19cd7fdbd5b79e9d78c8cb562741d7513d980b18" }
#actix = { git = "https://github.com/polachok/actix", rev = "58e5309310cccd38ce9b75141547a67610454759" }

[features]
default = ["jsonparsed"]
jsonparsed = ["solana-account-decoder", "solana-sdk", "solana-program", "spl-token-v2-0"]
